2009-08-28  okkez  <okkez000@gmail.com>

	* hiki/config.rb (Hiki::Config#initialize): improved performance.

2009-08-24  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/parser.rb, style/default/html_formatter.rb:
	replacing WikiName links is now handled by HikiDoc by specifying
	use_wiki_name parameter.

2009-08-23  okkez  <okkez000@gmail.com>

	* hiki/command.rb (Hiki::Command): use ERB::Util#h
	instead of String#escapeHTML or CGI::Util#escapeHTML .
	* hiki/interwiki.rb (Hiki::InterWiki): ditto.
	* hiki/pluginutil.rb (Hiki::Util): ditto.
	* hiki/storage.rb (Hiki::HikiDBBase): ditto.
	* hiki/util.rb (Hiki::Util): ditto.

2009-08-23  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/hikidoc.rb: use recent hikidoc.rb (rev.122). fix a
	bug: strings after non-WikiName expression are ignored.

2009-08-19  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/rank.rb: increment hit count only in view mode.

2009-08-17  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/docdiff/charstring.rb: code cleanup.

2009-08-16  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/docdiff/charstring.rb: many changes for Ruby-1.9.
	* hiki/docdiff/encoding/document.rb: do not guess encoding for
	Ruby-1.9.

	* hiki/docdiff/encoding/ja_utf8.rb: quote regular expressions
	correctly.

	* style/default/hikidoc.rb: use recent hikidoc.rb (rev.116).

2009-08-15  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/command.rb (cmd_diff): use unified_diff if word_diff raises
	an exception, because word_diff can raise
	Encoding::CompatibilityError in Ruby-1.9. this change should be
	temporary and should be removed when docdiff becomes Ruby-1.9
	ready.

	* hiki/util.rb (unified_diff): escape output in this method just
	same as word_diff() does.
	* misc/plugin/rss.rb (rss_body): remove escape because
	unified_diff() will escape instead.

	* hiki.cgi: set Encoding::defailt_external if exists (for Ruby
	1.9). add :accept_charset parameter in CGI.new().

	* style/default/html_formatter.rb: remove a needless regexp
	option.
